# ababiu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  context-free_grammar.md  hello.abb  hello.abn  hello.txt  include.h  main.cc  make.bat  makefile  run_ir.py  simple.abn  test.abb  xmake.lua
CmdLineParser/: CmdLineParser.cc
FileManager/: FileManager.cc  FileManager.h
Lexer/: Lexer.cc  Lexer.h  signToken.cc
SayError/: SayError.cc  SayError.h
Token/: Token.h
debug/: debug.h
doc/: CmdLineParser.md  IR.md  Parser.md  README.md  SayError.md  Token.md  cfg.md  debug.md
doc/Abandon/: 1.hello.md
libababiu/: io.c  libababiu.abb  libababiu.c  pow.asm  start.asm
src/: _test.cc  include.h  main.cc  main_ir.cc  main_test.cc
src/AST/: AST.cc  AST.h  Tree.cc  Tree.h
src/AutoAssign/: AutoAssign.cc  AutoAssign.h
src/CmdLineParser/: CmdLineParser.cc  CmdLineParser.h
src/CodeGen/: CodeGen.cc  CodeGen.h
src/FileManager/: FileManager.cc  FileManager.h
src/IR/: IR.cc  IR.h
src/Lexer/: Lexer.cc  Lexer.h  signToken.cc
src/Literal/: Literal.cc  Literal.h
src/Parser/: Parser.cc  Parser.h  backtrack.cc  context-free_grammar.md  function.cc  functionCall.cc  if_else.cc  loop.cc  unit.cc  utils.cc
src/PointerManager/: PointerManager.cc  PointerManager.h
src/SayError/: SayError.cc  SayError.h
src/StackEraser/: StackEraser.cc  StackEraser.h
src/Symbol/: Symbol.cc  Symbol.h  Symbol.h.c
src/SymbolTable/: FunctionMap.h  SymbolTable.cc  SymbolTable.h  VariableMap.cc  VariableMap.h
src/Syntax/: Control.cc  Define.cc  Symbol.cc  Symbol.h  Syntax.cc  Syntax.h
(+10 files in other folders)
